--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="divTitle"></div>
+    <div id="localName"></div>
     <script src="src\js\api.js">
     </script>
 </body>
