--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css\styleelements.css">
     <title>Cross Map 0.0.1</title>
 </head>
 <body>
-    <div id="divTitle"></div>
-    <div id="localName"></div>
+    <div id="barsStyle">
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Cadastrar</li>
+            <li>Visão geral</li>
+            <li>Sobre</li>
+        </ul>
+    </nav>
+</div>
+    <div id="placeDash">
+        <div id="localName"></div>
+    </div>
     <script src="src\js\api.js">
     </script>
 </body>
