front end changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css\styleelements.css">
+    <link rel="stylesheet" type="text/css" href="css\shapes.css">
     <title>Cross Map 0.0.1</title>
 </head>
 <body>
@@ -17,9 +18,20 @@
         </ul>
     </nav>
 </div>
-    <div id="placeDash">
-        <div id="localName"></div>
+<div id="triangle-topright" class="side"></div>
+<div class="content">
+    <div class="content-aticle">
+        <div class="article-title">
+            Crie ambientes virtuais de estudo e trabalho e compartilhe soluções!
+        </div>
+        <article class="article-content">
+            Compartilhe com seus amigos e com qualquer pessoa suas ideias e soluções digitais, em um unico ambiente ache soluções elegantes com ambiente colaborativo.
+        </article>
+        <div id="botton">Começar a criar agora</div>
+        <div id="botton">Ver lista de ambientes</div>
     </div>
+    <div class="content-aticle-left"><div id="square" class="square-pos-home"></div></div>
+</div>
     <script src="src\js\api.js">
     </script>
 </body>
